jwt support part1 added

--- a/LinqExample/WebAPI/appsettings.json
+++ b/LinqExample/WebAPI/appsettings.json
@@ -1,4 +1,10 @@
 {
+  "TokenOptions": {
+    "Audience": "kaan@kaansen.com",
+    "Issuer": "kaan",
+    "AccessTokenExpiration": 10,
+    "SecurityKey": "mysupersecretkeymysupersecretkeymysupersecretkey"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
